Refactor: Add implementation comments to stream exercise for clarity
This commit improves the readability of the main method by structuring the code into logical blocks with explanatory comments, clarifying the purpose of each stream pipeline.